--- a/public/css/client/style.css
+++ b/public/css/client/style.css
@@ -669,76 +669,55 @@ ol {
 }
 
 .banner__item {
-	position: relative;
-	overflow: hidden;
+    text-align: center;
 }
 
-.banner__item:hover .banner__item__text a:after {
-	width: 40px;
-	background: #e53637;
-}
-
-.banner__item.banner__item--middle {
-	margin-top: -75px;
-}
-
-.banner__item.banner__item--middle .banner__item__pic {
-	float: none;
-}
-
-.banner__item.banner__item--middle .banner__item__text {
-	position: relative;
-	top: 0;
-	left: 0;
-	max-width: 100%;
-	padding-top: 22px;
-}
-
-.banner__item.banner__item--last {
-	margin-top: 100px;
-}
-
-.banner__item__pic {
-	float: right;
+.banner__item__pic img {
+    width: 100%;
+    height: 250px;
+    display: block;
+    margin: 0 auto;
+    border-radius: 10px;
 }
 
 .banner__item__text {
-	max-width: 300px;
-	position: absolute;
-	left: 0;
-	top: 140px;
+    margin-top: 10px;
 }
 
-.banner__item__text h2 {
-	color: #111111;
-	font-weight: 700;
-	line-height: 46px;
-	margin-bottom: 10px;
+.banner__item__text h5 {
+    color: #111;
+    font-weight: 700;
+    margin-bottom: 8px;
 }
 
 .banner__item__text a {
-	display: inline-block;
-	color: #111111;
-	font-size: 13px;
-	font-weight: 700;
-	letter-spacing: 4px;
-	text-transform: uppercase;
-	padding: 3px 0;
-	position: relative;
+    display: inline-block;
+    color: #111;
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    position: relative;
+    padding-bottom: 3px;
 }
 
-.banner__item__text a:after {
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 2px;
-	background: #111111;
-	content: "";
-	-webkit-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
+.banner__item__text a::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: #111;
+    transition: all 0.3s;
 }
+
+.banner__item__text a:hover::after {
+    width: 40px;
+    background-color: #e53637;
+}
+
 
 /*---------------------
   Categories
